Payments: add setuptools; lazy-import Razorpay to avoid boot crash

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ python-multipart
 openai
 email-validator
 python-jose[cryptography]
-httpx==0.27.2
+httpx==0.27.0
 PyPDF2
 python-docx
 openpyxl
 requests
 reportlab
 razorpay==1.4.2
+setuptools>=69
